--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -3,13 +3,13 @@
 <html>
   		<link href="http://vjs.zencdn.net/5.8.8/video-js.css" rel="stylesheet">
 		<!-- Bootstrap -->
-	    <link rel='stylesheet' href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-	    <link rel='stylesheet' href="{% static "css/mystyle.css" %}">	
+<link rel='stylesheet' href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+	    <link rel='stylesheet' href="{% static "css/mystyle.css" %}">
 <head>
 	
 </head>
 <body>
-<nav class="navbar navbar-inverse navbar-static-top" role="navigation">
+ <nav class="navbar navbar-inverse navbar-static-top" role="navigation">
     <div class="container">
         <div class="navbar-header">
             <a class="navbar-brand"  style='color: orange;' href="#">
@@ -24,13 +24,13 @@
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
-                <li><a href="index.php">Home</a></li>
-                <li><a href="about.php">About</a></li>
-                <li><a href="#portfolio">Portfolio</a></li>
-                <li><a href="#">Blog</a></li>
-                <li><a href="contact.php">Contact</a></li>
+                <li><a href="/login/">login</a></li>
+                <li><a href="/logout/">logout</a></li>
+                <li><a href="/signup/">Sign Up</a></li>
+                <li><a href="/upload/">upload</a></li>
+                <li><a href="/myvideos/">My Videos</a></li>
             </ul>
         </div>
     </div>
