--- a/main/templates/video.html
+++ b/main/templates/video.html
@@ -5,7 +5,7 @@
 		<div class='embed-responsive embed-responsive-16by9'>
 				<video id="my-video" class="video-js vjs-big-play-centered embed-responsive-item" controls preload="auto" width="auto" height="auto" poster="" data-setup="{}">
 				    <source src="/media/{{ video.file }}" type='video/mp4'>
-				    <source src="MY_VIDEO.webm" type='video/webm'>
+
 				    <p class="vjs-no-js">
 				    To view this video please enable JavaScript, and consider upgrading to a web browser that
 				    <a href="http://videojs.com/html5-video-support/" target="_blank">supports HTML5 video</a>
@@ -29,6 +29,6 @@
 </div>
 
 
-  <script src="http://vjs.zencdn.net/5.8.8/video.js"></script>
+  <!-- <script src="http://vjs.zencdn.net/5.8.8/video.js"></script> -->
 
 {% endblock %}
