--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -1,10 +1,10 @@
 {% load staticfiles %}
 <!DOCTYPE html>
 <html>
-  		<!--<link href="http://vjs.zencdn.net/5.8.8/video-js.css" rel="stylesheet">
+  		<link href="http://vjs.zencdn.net/5.8.8/video-js.css" rel="stylesheet">
 		<!-- Bootstrap -->
-<!--<link rel='stylesheet' href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-	    <link rel='stylesheet' href="{% static "css/mystyle.css" %}">-->
+<link rel='stylesheet' href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+	    <link rel='stylesheet' href="{% static "css/mystyle.css" %}">
 <head>
 	
 </head>
